syntax = "proto3";
package dm.atlas;
import "shared.proto";

service SignatureAtlasService {
  rpc List(dm.shared.Empty) returns (SignatureReturns);
}

message SignatureReturns { repeated SignatureReturn list = 1; }

message SignatureReturn {
  uint32 char_id = 1;
  repeated uint32 lc_id = 2;
}